--- a/package.json
+++ b/package.json
@@ -3,12 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@loaders.gl/core": "^3.2.12",
+    "@loaders.gl/ply": "^3.2.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "deck.gl": "^8.8.9",
+    "http-server": "^14.1.1",
+    "loaders.gl": "^0.3.5",
+    "mapbox-gl": "^2.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^7.0.19",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.5.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
